--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
     "astro": "^5.4.2",
+    "astro-expressive-code": "^0.40.2",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
