--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.1.1",
     "@tailwindcss/vite": "^4.0.12",
     "astro": "^5.4.2",
     "astro-expressive-code": "^0.40.2",
