--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/vite": "^4.0.12",
     "astro": "^5.4.2",
     "astro-expressive-code": "^0.40.2",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
